pause for now...

--- a/python/utils/survey.yaml
+++ b/python/utils/survey.yaml
@@ -1,5 +1,33 @@
 showQuestionNumbers: off
 pages:
+  - name: statement0
+    elements:
+      - type: html
+        name: statement
+        html: This is a statement
+      - type: "imagepicker"
+        name: "statement0"
+        colCount: 3
+        showLabel: false
+        choices:
+          - value: "agree"
+            imageLink: "https://guns.democracygps.org/images/agree.png"
+          - value: "disagree"
+            imageLink: "https://guns.democracygps.org/images/disagree.png"
+          - value: "pass"
+            imageLink: "https://guns.democracygps.org/images/pass.png"
+  - name: statements
+    elements:
+      - type: html
+        name: statement
+        html: This is a statement
+      - type: radiogroup
+        name: feedback
+        title: "Please select your response:"
+        choices:
+          - Agree
+          - Disagree
+          - Pass
   - name: new_statements
     title: >-
       Are your perspectives or experiences missing from the conversation?
